2008-12-30  Stéphane Raimbault  <stephane.raimbault@gmail.com>

	* vertimus/forms.py:
	* vertimus/models.py:
	* vertimus/views.py: Added forms validators for file and comment.

2008-12-30  Claude Paroz  <claude@2xlibre.net>

	* media/css/main.css: Add new class used in vertimus_detail.
	* templates/teams/team_base.html: Fix table width.
	* templates/teams/team_detail.html: Swap doc and ui stats display.
	* templates/vertimus/vertimus_detail.html: Display all releases containing
	the branch. Fix translation details.
	* vertimus/models.py: Use gettext_lazy so as Action and State descriptions
	are translated at the last time.
	* vertimus/views.py: Get pot Stats object when there is still no
	translation for a language.

2008-12-30  Claude Paroz  <claude@2xlibre.net>

	* templates/vertimus/vertimus_detail.html: Move the download icon just
	before translation stats (it is not always a pot file). Move the notices
	after this block.

2008-12-30  Claude Paroz  <claude@2xlibre.net>

	* templates/vertimus/vertimus_detail.html: When a branch is not in any
	release, display a link to the module instead to the release.

2008-12-30  Claude Paroz  <claude@2xlibre.net>

	* people/forms.py:
	* people/views.py: Catch error if user is added multiple times in the same
	team.
	* templates/languages/language_release_stats.html:
	* templates/stats_show.html:
	* templates/vertimus/vertimus_detail.html:
	* vertimus/urls.py:
	* vertimus/views.py: Pass language.id to vertimus_by_stats_id, because
	when stats is the POT file, there is no other mean to retrieve the
	language.

2008-12-29  Stéphane Raimbault  <stephane.raimbault@gmail.com>

	* media/css/layout.css:
	* media/css/main.css:
	* templates/languages/language_release_stats.html:
	* templates/module_detail.html:
	* templates/release_detail.html:
	* templates/release_list.html:
	* templates/teams/team_detail.html:
	* vertimus/models.py: Remove inline styles and swap
	UI and Documentation columns.
