@@ -1,5 +1,10 @@
 2008-12-30  Stéphane Raimbault  <stephane.raimbault@gmail.com>
 
+	* templates/vertimus/vertimus_detail.html: <em> on No comment.
+	* vertimus/forms.py: Added new valid extensions.
+	
+2008-12-30  Stéphane Raimbault  <stephane.raimbault@gmail.com>
+
 	* vertimus/forms.py:
 	* vertimus/models.py:
 	* vertimus/views.py: Added forms validators for file and comment.
